--- a/conf/envs/cartpole.yaml
+++ b/conf/envs/cartpole.yaml
@@ -2,7 +2,9 @@ env:
   name: Cartpole-v0
   state_size: 4
   action_size: 1
-  param_multiplier: 3
+  param_size: 0
+  target_size: 0
+
 
 num_trials: 20
 trial_timesteps: 200
