--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -1,5 +1,5 @@
 env: reacher # lorenz or reacher
-data_dir: l500_t100_n100.dat
+data_dir: l500_t100_n100.dat # l500_t50_v5.dat #
 data_dir_lorenz: 25.dat
 model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to load models from within a subfolder in the models directory
@@ -19,7 +19,15 @@ hydra:
         exclude_keys: ['random_seed']
 
 plotting:
-  models: t
+  models:
+  - d_0
+  - de_0
+  - p_0
+  - pe_0
+  - t_0
+  - te_0
+  - tp_0
+  - tpe_0
   num_eval_train: 0
   num_eval_test: 10
   t_range: 500
