--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -20,8 +20,9 @@ hydra:
 
 plotting:
   models:
-  - d
+  - p
   - t
+  - tp
 #  - p
 #  - tp
 #  - de
@@ -37,13 +38,13 @@ plotting:
 #  - tp_0
 #  - tpe_0
   num_eval_train: 0
-  num_eval_test: 100
+  num_eval_test: 20
   compute_action: false
-  legend: false
+  legend: true
   t_range: 1000
   mse_y_max: 2 #5
   copies: 0
-  all: false
+  all: true
   states: true
   mse: true
   sorted: false
