--- a/conf/models/t.yaml
+++ b/conf/models/t.yaml
@@ -6,8 +6,8 @@ model:
   delta: false
   gp: false
   training:
-    hid_width: 500 # 250
-    hid_depth: 3 # 2
+    hid_width: 250
+    hid_depth: 2
     E: 1
     # Note: these do nothing for non trajectory based models
     train_target: true
@@ -17,27 +17,27 @@ model:
     num_traj: 50
   optimizer:
     epochs: 22
-    batch: 32
+    batch: 256 #32
     name: Adam
     split: .8
     lr: .0008 # 4
     regularization: 0
     max_size: 100000
-  preprocess:
-    state:
-      class: sklearn.preprocessing.MinMaxScaler
-      params:
-        feature_range: [-1.,1.]
-    index:
-      class: sklearn.preprocessing.MinMaxScaler
-      params:
-        feature_range: [-1.,1.]
-    param:
-      class: sklearn.preprocessing.MinMaxScaler
-      params:
-        feature_range: [-1.,1.]
-    output:
-      class: sklearn.preprocessing.StandardScaler
+#  preprocess:
+#    state:
+#      class: sklearn.preprocessing.MinMaxScaler
+#      params:
+#        feature_range: [-1.,1.]
+#    index:
+#      class: sklearn.preprocessing.MinMaxScaler
+#      params:
+#        feature_range: [-1.,1.]
+#    param:
+#      class: sklearn.preprocessing.MinMaxScaler
+#      params:
+#        feature_range: [-1.,1.]
+#    output:
+#      class: sklearn.preprocessing.StandardScaler
   plotting:
     label: Trajectory Based Deterministic
     color: '#ff0000'
